--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,3 +59,31 @@ h3 {
     #7b3ec8 96.04%
   );
 }
+.myBtn {
+  display: block;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 100%;
+  scale: 0.9;
+  padding: 10px;
+  height: 60px;
+  width: 60px;
+  background-color: rgba(185, 0, 166, 0.7);
+}
+
+.none {
+  display: none;
+}
+
+.myBtn:hover {
+  background-color: rgba(77, 0, 69, 0.7);
+
+  scale: 1;
+}
